--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@labshare/services-auth",
+  "name": "@niaid/services-auth",
   "version": "1.20.0",
-  "description": "LabShare Services plugin for resource scope-based HTTP route and socket authorization",
+  "description": "NIAID Hedwig (formerly LabShare) Services plugin for resource scope-based HTTP route and socket authorization",
   "main": "./",
   "scripts": {
     "commitmsg": "commitlint -e $GIT_PARAMS",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/LabShare/services-auth.git"
+    "url": "git+https://github.com/niaid/services-auth.git"
   },
   "keywords": [
     "LabShare",
@@ -20,12 +20,12 @@
     "Auth"
   ],
   "author": "",
-  "contributors": "https://github.com/LabShare/services-auth/graphs/contributors",
+  "contributors": "https://github.com/niaid/services-auth/graphs/contributors",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/LabShare/services-auth/issues"
+    "url": "https://github.com/niaid/services-auth/issues"
   },
-  "homepage": "https://github.com/LabShare/services-auth#readme",
+  "homepage": "https://github.com/niaid/services-auth#readme",
   "dependencies": {
     "deprecate": "^1.0.0",
     "express-jwt": "^5.3.0",
@@ -39,7 +39,7 @@
   "devDependencies": {
     "@commitlint/cli": "^7.0.0",
     "@commitlint/config-conventional": "^7.0.1",
-    "@labshare/services": "^3.0.0",
+    "@niaid/services": "^3.0.0",
     "cookie-parser": "^1.4.3",
     "coveralls": "^3.0.1",
     "express": "^4.14.0",
@@ -52,12 +52,12 @@
     "selfsigned": "^1.10.2",
     "socket.io-client": "^2.1.1",
     "supertest": "^3.1.0",
-    "@labshare/semantic-release-config": "^1.0.0",
+    "@niaid/semantic-release-config": "^1.0.0",
     "travis-deploy-once": "^5.0.0",
     "semantic-release": "^15.5.0"
   },
   "release": {
-    "extends": "@labshare/semantic-release-config"
+    "extends": "@niaid/semantic-release-config"
   },
   "publishConfig": {
     "access": "restricted"
